--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@rneui/base": "^0.0.0-edge.2",
@@ -32,13 +33,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "sqlite": "^5.1.1",
     "react-native-svg": "15.2.0",
-    "@react-native-picker/picker": "2.7.5"
+    "react-native-web": "~0.19.10",
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
